vlib/v/checker/tests/c_js_struct_and_fn_as_generics_error.vv
struct C.Ptr[T] {
	ptr &T
}

fn C.alloc[T]() &T

fn JS.encode[T](data string) T

struct JS.Some[T] {
	i T
}

fn main() {}
